[package]
name = "telegram-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossterm = "0.26.1"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
tdlib = "0.6.0"
tokio = { version = "1.27.0", features = ["full"]}
tui = "0.19.0"
